<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_dialog"
    android:paddingVertical="15dp"
    android:orientation="vertical"
    android:layout_marginBottom="90dp">

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:text="@string/started_record_dlg_title"
        android:textAllCaps="false"
        android:textColor="@color/text_color_bold"
        android:textSize="16sp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxWidth="230dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="4dp"
            android:gravity="center_vertical"
            android:text="@string/stop_record_dlg_content"
            android:textAllCaps="false"
            android:textColor="@color/text_color_gray"
            android:textSize="12sp" />

        <Button
            android:id="@+id/confirm_btn"
            android:layout_width="wrap_content"
            android:layout_height="32dp"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="16dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:background="@drawable/dialog_confirm_btn_bg"
            android:gravity="center"
            android:text="@string/started_record_dlg_ok_btn"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="12sp" />

    </RelativeLayout>
</LinearLayout>