<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/transparent">

    <RelativeLayout
        android:layout_width="316dp"
        android:layout_height="187dp"
        android:paddingTop="16dp"
        android:paddingBottom="31dp"
        android:paddingHorizontal="24dp"
        android:background="@drawable/bg_dialog"
        android:layout_gravity="center">

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="8dp"
            android:gravity="center"
            android:text="@string/participants_dialog_unmute_all_title"
            android:textColor="@color/text_color_item_title"
            android:textSize="18sp" />

        <Button
            android:id="@+id/unmute_all_btn"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_below="@+id/title"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="16dp"
            android:background="@drawable/single_blue_btn"
            android:gravity="center"
            android:text="@string/participants_dialog_unmute_all_btn"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="16sp" />
        <Button
            android:id="@+id/cancel_btn"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/unmute_all_btn"
            android:text="@string/meeting_dialog_negative_btn"
            android:textAllCaps="false"
            android:textColor="@color/text_color_item_title"
            android:textSize="16sp"
            android:gravity="center"
            android:layout_marginBottom="8dp"
            android:background="@drawable/single_white_btn"
            />
    </RelativeLayout>

</FrameLayout>